--- a/client-myjss/src/app/modules/quotation/components/services-selection/services-selection.component.css
+++ b/client-myjss/src/app/modules/quotation/components/services-selection/services-selection.component.css
@@ -17,3 +17,7 @@
 .btn.btn-outline-primary:hover {
   color: var(--ar-secondary) !important;
 }
+
+.btn.btn-secondary {
+  color: var(--ar-primary) !important;
+}
