--- a/client-myjss/src/assets/css/theme.css
+++ b/client-myjss/src/assets/css/theme.css
@@ -132,7 +132,7 @@
   --ar-light-text-emphasis: #576071;
   --ar-dark-text-emphasis: #121519;
   --ar-primary-bg-subtle: #ecf4f1;
-  --ar-secondary-bg-subtle: #f6f9fc;
+  --ar-secondary-bg-subtle: #708AA8;
   --ar-success-bg-subtle: #ecfaf4;
   --ar-info-bg-subtle: #ecf2fa;
   --ar-warning-bg-subtle: #fdfaee;
