--- a/client-myjss/src/app/modules/quotation/components/required-information/required-information.component.html
+++ b/client-myjss/src/app/modules/quotation/components/required-information/required-information.component.html
@@ -19,11 +19,11 @@
           <div class="row align-items-center" *ngIf="asso.services">
             <!-- Pill buttons -->
             <a *ngFor="let service of asso.services;let indexService = index"
-              (click)="selectServiceIndex(indexService, selectedAssoIndex!, $event)"
-              [ngClass]="{'btn-secondary': selectedAssoIndex == selectedAssoIndex && indexService == selectedServiceIndex, 'btn-outline-primary': selectedAssoIndex != selectedAssoIndex || indexService != selectedServiceIndex}"
+              (click)="selectServiceIndex(indexService, index!, $event)"
+              [ngClass]="{'btn-secondary': index == selectedAssoIndex && indexService == selectedServiceIndex, 'btn-outline-primary': index != selectedAssoIndex || indexService != selectedServiceIndex}"
               class="btn btn-secondary rounded-pill mt-2 ms-1 mt-md-3 ms-md-3 col-auto pill">
               {{service.serviceLabelToDisplay}}
-              <i *ngIf="selectedAssoIndex == selectedAssoIndex && indexService == selectedServiceIndex"
+              <i *ngIf="index == selectedAssoIndex && indexService == selectedServiceIndex"
                 class="ai-circle-arrow-right ms-2"></i>
             </a>
           </div>
@@ -52,7 +52,7 @@
     </div>
     <ul class="nav nav-tabs" role="tablist"
       *ngIf="selectedAssoIndex!=null && selectedServiceIndex!=null && quotation.assoAffaireOrders[selectedAssoIndex] && quotation.assoAffaireOrders[selectedAssoIndex].services[selectedServiceIndex]">
-      <li class="nav-item "
+      <li class="nav-item"
         *ngIf="(quotation.assoAffaireOrders[selectedAssoIndex].services[selectedServiceIndex].assoServiceFieldTypes || quotation.assoAffaireOrders[selectedAssoIndex].services[selectedServiceIndex].assoServiceDocuments)">
         <a href="#documents" class="nav-link active quotation-tabs" data-bs-toggle="tab" role="tab">
           Documents
@@ -294,11 +294,12 @@
 
   <div
     class="position-fixed bottom-0 start-0 w-100 bg-light shadow-sm p-3 m-0 d-flex justify-content-between align-items-center z-3">
-    <button type="button" class="btn btn-secondary rounded-1 mx-5 d-flex align-items-center" data-bs-toggle="modal"
-      data-bs-target="#confirmBackModal">
-      <i class=" ai-arrow-left"></i>
+    <button type="button" class="btn btn-secondary rounded-1 mx-5 d-flex align-items-center"
+      (click)="moveToPreviousService()">
+      <i class="ai-arrow-left"></i>
       <span class="d-none d-sm-inline ms-2">Étape précédente</span>
     </button>
+
 
     <button type="button" class="btn btn-secondary rounded-1 mx-5 d-flex align-items-center" *ngIf="canSaveQuotation()"
       (click)="saveFieldsValue()">
@@ -309,7 +310,8 @@
 </div>
 
 <!-- Modal de confirmation -->
-<div class="modal fade" id="confirmBackModal" tabindex="-1" aria-labelledby="confirmBackModalLabel" aria-hidden="true">
+<div class="modal fade" id="confirmBackModal" #confirmBackModal tabindex="-1" aria-labelledby="confirmBackModalLabel"
+  aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
       <div class="modal-header">
@@ -321,7 +323,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Annuler</button>
-        <button type="button" class="btn btn-danger ms-2" (click)="goBackQuotation()"
+        <button type="button" class="btn btn-danger ms-2" (click)="confirmGoBack()"
           data-bs-dismiss="modal">Confirmer</button>
       </div>
     </div>
