add kanban provision

--- a/client/src/app/modules/administration/components/constant/constant.component.html
+++ b/client/src/app/modules/administration/components/constant/constant.component.html
@@ -912,6 +912,14 @@
           </tr>
           <tr>
             <td>
+              <select-active-directory-group [(model)]="constant.activeDirectoryGroupInsertions"
+                label="Groupe Active Directory - Insertions" [form]="constantForm"
+                propertyName="activeDirectoryGroupInsertions" [isMandatory]=" true"
+                [isDisabled]="!editMode"></select-active-directory-group>
+            </td>
+          </tr>
+          <tr>
+            <td>
               <select-active-directory-group [(model)]="constant.activeDirectoryGroupSales"
                 label="Groupe Active Directory - Commerciaux" [form]="constantForm"
                 propertyName="activeDirectoryGroupSales" [isMandatory]=" true"
