--- a/client/src/app/modules/dashboard/components/order-kaban/order-kaban.component.html
+++ b/client/src/app/modules/dashboard/components/order-kaban/order-kaban.component.html
@@ -15,7 +15,9 @@
 
 <div class="kanban-container top-container">
   <div *ngFor="let status of statusSelected" class="kanban-column">
-    <h3 style="margin: 0px;">{{ status.label }}</h3>
+    <h3 style="margin: 0px; text-align: center;"><span [matBadge]="status.id?numberOfEntitiesByStatus[status.id]:0"
+        [matBadgeHidden]="!status.id || numberOfEntitiesByStatus[status.id]==0" matBadgePosition="after"
+        matBadgeSize="small">{{ status.label }}</span></h3>
   </div>
 </div>
 <ng-container *ngFor="let swimlane of swimlanes">
@@ -128,24 +130,27 @@
         [matMenuTriggerFor]="statusMenu">{{selectedEntity.customerOrderStatus.label}}
         <mat-icon>expand_more</mat-icon></button>
       <mat-menu #statusMenu="matMenu">
-        <button mat-menu-item (click)="displayQuotationWorkflowDialog()">
-          <span>Voir le workflow</span>
-        </button>
-        <button disabled mat-menu-item *ngIf="selectedEntity.customerOrderStatus.successors">
-          <span>Passer à</span>
-        </button>
-        <button mat-menu-item *ngFor="let status of selectedEntity.customerOrderStatus.successors"
-          (click)="changeOrderStatus(selectedEntity,status)">
-          <mat-icon>{{status.icon}}</mat-icon><span>{{status.label}}</span>
-        </button>
-        <button disabled mat-menu-item
-          *ngIf="selectedEntity.customerOrderStatus.predecessors && selectedEntity.customerOrderStatus.predecessors.length>0">
-          <span>Revenir à</span>
-        </button>
-        <button mat-menu-item *ngFor="let status of selectedEntity.customerOrderStatus.predecessors"
-          (click)="changeOrderStatus(selectedEntity, status)">
-          <mat-icon>{{status.icon}}</mat-icon><span>{{status.label}}</span>
-        </button>
+        <ng-container *ngIf="getCompleteStatus(selectedEntity.customerOrderStatus)">
+          <button mat-menu-item (click)="displayQuotationWorkflowDialog()">
+            <span>Voir le workflow</span>
+          </button>
+          <button disabled mat-menu-item *ngIf="getCompleteStatus(selectedEntity.customerOrderStatus)!.successors">
+            <span>Passer à</span>
+          </button>
+          <button mat-menu-item *ngFor="let status of getCompleteStatus(selectedEntity.customerOrderStatus)!.successors"
+            (click)="changeOrderStatus(selectedEntity,status)">
+            <mat-icon>{{status.icon}}</mat-icon><span>{{status.label}}</span>
+          </button>
+          <button disabled mat-menu-item
+            *ngIf="selectedEntity.customerOrderStatus.predecessors && getCompleteStatus(selectedEntity.customerOrderStatus)!.predecessors.length>0">
+            <span>Revenir à</span>
+          </button>
+          <button mat-menu-item
+            *ngFor="let status of getCompleteStatus(selectedEntity.customerOrderStatus)!.predecessors"
+            (click)="changeOrderStatus(selectedEntity, status)">
+            <mat-icon>{{status.icon}}</mat-icon><span>{{status.label}}</span>
+          </button>
+        </ng-container>
       </mat-menu>
     </div>
 
