--- a/client-myjss/src/app/modules/quotation/components/checkout/checkout.component.css
+++ b/client-myjss/src/app/modules/quotation/components/checkout/checkout.component.css
@@ -7,3 +7,33 @@
     background-color: white;
     border-radius: 8px;
 }
+
+.card:hover {
+    /* override quotation-component just for the page */
+    opacity: 1;
+}
+
+.checkout-container {
+    background-color: var(--ar-gray-200);
+    padding: 4rem;
+    padding-left: 1.6rem;
+    padding-right: 1.6rem;
+    margin-top: -1rem;
+    margin-bottom: -2rem;
+}
+
+.cart-panel {
+    background-color: white;
+    overflow-y: auto;
+    max-height: 100vh;
+}
+
+/* Only for mobile */
+button.btn-icon {
+    z-index: 1100;
+}
+
+.btn-close {
+    color: var(--ar-secondary);
+    z-index: 1110;
+}
