--- a/client-myjss/src/app/modules/my-account/components/quotation-details/quotation-details.component.html
+++ b/client-myjss/src/app/modules/my-account/components/quotation-details/quotation-details.component.html
@@ -119,7 +119,7 @@
             </div>
             <div class="me-3 me-sm-4">
               <div class="text-body-secondary fs-sm me-3 ">
-                {{service.servicePrice | currency:'EUR' }}
+                {{service.serviceTotalPrice | currency:'EUR' }}
               </div>
             </div>
           </div>
